# CDS_Cap_MVT

./: 26_mobnet.py  README.md  app.py  gitignore.txt  master_utils.py  model.py  pyproject.toml  replit.nix  requirements.txt  utils.py
.streamlit/: config.toml
